# self-sensored-io

./: .gitignore  LICENSE  README.md  env_example  samconfig.toml  template.yaml
rust_app/: Cargo.toml  start.sh
rust_app/src/: lib.rs  main.rs
rust_app/src/models/: api_gateway.rs  mod.rs  record.rs
rust_app/tests/: integration_test.rs
test_models/: base_api_gateway_request.json  store_request.json
