[package]
edition = "2021"
name = "self-sensored-io"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = {version = "1.1.5", features = ["behavior-version-latest"]} 
aws-sdk-dynamodb = "1.14.0" 
aws-smithy-client = {version = "0.60.3"} 
aws-types = {version = "0.52.0", features = ["hardcoded-credentials"]} 
chrono = {version = "0.4.34", features = ["serde"]} 
dotenv = "0.15.0" 
lambda_http = "0.9.2" # https://docs.rs/lambda_http/latest/lambda_http/
serde = {version = "1.0.196", features = ["derive"]} 
serde_json = {version = "1.0", default-features = false, features = ["alloc"]} 
tokio = {version = "1", features = ["full"]}# https://docs.rs/tokio/latest/tokio/                                    
uuid = {version = "1.7.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"]} 

[dev-dependencies]
aws-smithy-http = "0.52.0"
http = "0.2.8"

# https://github.com/cargo-lambda/cargo-lambda/issues/567
